dataset1235/2025-2/805158916/users/1084532176/executions/71079933_146336312.log
== SUBMISSION (2025-08-11 15:32:31)
-- CODE: 
print("Cada guerreiro vai receber:",50//3)
print("E o informante vai receber:",50%3)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
xx
---- correct output:
16
2
---- user output:
E o informante vai receber: 2
-- TEST CASE 2:
---- input:
xx
---- correct output:
16
2
---- user output:
E o informante vai receber: 2
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-11 15:32:55)
-- CODE: 
print("Cada guerreiro vai receber:",50//3)
print("E o informante vai receber:",50%3)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
16
2
---- user output:
E o informante vai receber: 2
-- TEST CASE 2:
---- input:
xx
---- correct output:
16
2
---- user output:
E o informante vai receber: 2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-11 15:32:49)
-- CODE: 
print("Cada guerreiro vai receber:",50//3)
print("E o informante vai receber:",50%3)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
xx
---- correct output:
16
2
---- user output:
E o informante vai receber: 2
-- TEST CASE 2:
---- input:
xx
---- correct output:
16
2
---- user output:
E o informante vai receber: 2
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-11 15:33:19)
-- CODE: 
print("Cada guerreiro vai receber:" ,50//3)
print("E o informante vai receber:", 50%3)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
16
2
---- user output:
E o informante vai receber: 2
-- TEST CASE 2:
---- input:
xx
---- correct output:
16
2
---- user output:
E o informante vai receber: 2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-11 15:32:30)
-- CODE: 
print("Cada guerreiro vai receber:",50//3)
print("E o informante vai receber:",50%3)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
16
2
---- user output:
E o informante vai receber: 2
-- TEST CASE 2:
---- input:
xx
---- correct output:
16
2
---- user output:
E o informante vai receber: 2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-11 15:33:57)
-- CODE: 
print(50//3)
print(50%3)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
xx
---- correct output:
16
2
---- user output:
2
-- TEST CASE 2:
---- input:
xx
---- correct output:
16
2
---- user output:
2
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-11 15:33:24)
-- CODE: 
print("Cada guerreiro vai receber:" ,50//3)
print("E o informante vai receber:", 50%3)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
xx
---- correct output:
16
2
---- user output:
E o informante vai receber: 2
-- TEST CASE 2:
---- input:
xx
---- correct output:
16
2
---- user output:
E o informante vai receber: 2
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-11 15:27:20)
-- CODE: 
print("Cada guerreiro vai receber:",50/3)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
16
2
---- user output:
Cada guerreiro vai receber: 16.666666666666668
-- TEST CASE 2:
---- input:
xx
---- correct output:
16
2
---- user output:
Cada guerreiro vai receber: 16.666666666666668
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-11 15:31:54)
-- CODE: 
print("Cada guerreiro vai receber:",50//3)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
16
2
---- user output:
Cada guerreiro vai receber: 16
-- TEST CASE 2:
---- input:
xx
---- correct output:
16
2
---- user output:
Cada guerreiro vai receber: 16
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-11 15:33:16)
-- CODE: 
print("Cada guerreiro vai receber:" ,50//3)
print("E o informante vai receber:", 50%3)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
xx
---- correct output:
16
2
---- user output:
E o informante vai receber: 2
-- TEST CASE 2:
---- input:
xx
---- correct output:
16
2
---- user output:
E o informante vai receber: 2
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-11 15:31:41)
-- CODE: 
print("Cada guerreiro vai receber:"50//3)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
16
2
-- ERROR:
File "XXXX", line 1
    print("Cada guerreiro vai receber:"50//3)
          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 2:
---- input:
xx
---- correct output:
16
2
-- ERROR:
File "XXXX", line 1
    print("Cada guerreiro vai receber:"50//3)
          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-11 15:27:40)
-- CODE: 
print("Cada guerreiro vai receber:",round(50/3,0))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
16
2
---- user output:
Cada guerreiro vai receber: 17.0
-- TEST CASE 2:
---- input:
xx
---- correct output:
16
2
---- user output:
Cada guerreiro vai receber: 17.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-11 15:33:55)
-- CODE: 
print(50//3)
print(50%3)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
16
2
---- user output:
2
-- TEST CASE 2:
---- input:
xx
---- correct output:
16
2
---- user output:
2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-11 15:27:55)
-- CODE: 
print("Cada guerreiro vai receber:",round(50/3,1))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
16
2
---- user output:
Cada guerreiro vai receber: 16.7
-- TEST CASE 2:
---- input:
xx
---- correct output:
16
2
---- user output:
Cada guerreiro vai receber: 16.7
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
